# authService

./: config.py  pyproject.toml
models/: user.py
repositories/: user.py
routing/: authentication.py  jwt.py
schemas/: user.py
services/: database.py  user.py
