[tool.poetry]
name = "authservice"
version = "0.1.0"
description = ""
authors = ["Dmitry <dab.work.en@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
pydantic = "^2.8.2"
sqlalchemy = "^2.0.31"
environs = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
